--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,20 @@
 			<artifactId>betterbeansbinding-swingbinding</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>1.6-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/javase-1.6-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>1.6-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/core-1.6-SNAPSHOT.jar</systemPath>
+        </dependency>
 	</dependencies>
 
 	<build>
