Added label for the todo list identifier

--- a/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
+++ b/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
@@ -12,6 +12,7 @@ MatrixListBuilderPanel-titleTextLabel.text=Title
 MatrixListBuilderPanel-titleTextTextField.columns=16
 MatrixListBuilderPanel-fontLabel.text=Font
 MatrixListBuilderPanel-fontChooseButton.text=...
+MatrixListBuilderPanel-uuidDescriptionLabel.text=Unique identifier
 
 MatrixListBuilderPanel-xLabel.text=X
 MatrixListBuilderPanel-yLabel.text=Y
