Moved the preview panel and the print button into its own panel

--- a/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
+++ b/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
@@ -20,5 +20,5 @@ MatrixListBuilderPanel-sizeLabel.text=Size
 MatrixListBuilderPanel-spacingLabel.text=Spacing
 MatrixListBuilderPanel-strokeWidthLabel.text=Stroke width
 
-MatrixListBuilderPanel-printButton.text=Print
+PreviewAndPrintPanel-printButton.text=Print...
 
