Added missing label for the number of copies

--- a/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
+++ b/src/main/resources/im/jeanfrancois/listbuilder/matrixlist/matrixlistbuilder.properties
@@ -21,4 +21,5 @@ MatrixListBuilderPanel-spacingLabel.text=Spacing
 MatrixListBuilderPanel-strokeWidthLabel.text=Stroke width
 
 PreviewAndPrintPanel-printButton.text=Print...
+PreviewAndPrintPanel-copiesLabel.text=Number of copies
 
