Added the print preview

--- a/src/main/resources/im/jeanfrancois/listbuilder/todolist/todolistbuilder.properties
+++ b/src/main/resources/im/jeanfrancois/listbuilder/todolist/todolistbuilder.properties
@@ -19,4 +19,5 @@ TodoListBuilderPanel-sizeLabel.text=Size
 TodoListBuilderPanel-spacingLabel.text=Spacing
 TodoListBuilderPanel-strokeWidthLabel.text=Stroke width
 
-TodoListBuilderPanel-printButton.text=Print
+PreviewAndPrintPanel-printButton.text=Print...
+PreviewAndPrintPanel-copiesLabel.text=Number of copies
